RESOLVED FIXED230829
[MSE][GStreamer] Don't create MediaSourceTrackGStreamer objects twice for the same track
https://bugs.webkit.org/show_bug.cgi?id=230829
Summary [MSE][GStreamer] Don't create MediaSourceTrackGStreamer objects twice for the...
Alicia Boya García
Reported 2021-09-27 07:07:05 PDT
The existing code in SourceBufferPrivateGStreamer::didReceiveInitializationSegment() was not checking if the track already existing, creating and immediately destroying a MediaSourceTrackGStreamer, which then crashed on an assertion (ASSERTION FAILED: m_isRemoved). This fixes the following two tests which were crashing with the former assertion when running in Debug: - media/media-source/media-mp4-h264-partial-abort.html - media/media-source/media-source-abort-resets-parser.html
Attachments
Patch (3.75 KB, patch)
2021-09-27 07:07 PDT, Alicia Boya García
no flags
Alicia Boya García
Comment 1 2021-09-27 07:07:54 PDT
Xabier Rodríguez Calvar
Comment 2 2021-09-28 03:20:15 PDT
Comment on attachment 439350 [details] Patch Doesn't this need changing the expectations?
Alicia Boya García
Comment 3 2021-09-28 08:57:00 PDT
(In reply to Xabier Rodríguez Calvar from comment #2) > Comment on attachment 439350 [details] > Patch > > Doesn't this need changing the expectations? No, because the expectations were not updated in the first place, they were appearing as unexpected crashes.
EWS
Comment 4 2021-09-28 09:32:37 PDT
Committed r283176 (242224@main): <https://commits.webkit.org/242224@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439350 [details].
Note You need to log in before you can comment on or make changes to this bug.